--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mysql2": "^3.9.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
