--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Files for the backend folder
+frontend/package-lock.json
 frontend/node_modules/
 backend/node_modules/
 backend/package-lock.json
