--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.10"
+    "@types/node": "^20.11.10",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0"
   }
 }
