--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
+    "node-mailer": "^0.1.1",
+    "node-schedule": "^2.1.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
