--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Files for the backend folder
 frontend/package-lock.json
 frontend/node_modules/
+frontend/build
 backend/node_modules/
 backend/package-lock.json
 backend/.env
